2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Check for --as-needed support for the 
	  linker.
	* panel-plugin/time-out.c: Only restart the break countdown
	  timer when the break countdown seconds have changed. 

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Post-release version bump.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* == Released 0.1.0 ===
	* NEWS, configure.in.in: Bump version.
	* po/*.po: Update Project-Id-Version.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/time-out-countdown.{c,h}: Enhance seconds to 
	  string conversion. It's now able to not include hours.
	* panel-plugin/time-out.c: Add options to show/hide hours and
	  the time in general. Tooltip added to the event box. Small
	  icon is now visible in the panel. Time can be hidden now.
	  Properly handle size and orientation changes.
	* panel-plugin/time-out-lock-screen.c: Update to new seconds
	  to string conversion.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/time-out-lock-screen.c: Remove invalid cast from
	  GtkButton to GtkMisc.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/Makefile.am: Update Makefile to fix make 
	  distcheck.
	* panel-plugin/time-out.h: Fix copyright year.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/time-out-lock-screen.c: Remove debug statement
	  and add a new translatable string.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* Initial import of a complete rewrite of the plugin. This one
	  is much cleaner and more reliable (no timer race conditions
	  anymore).

2007-02-18	Jannis Pohlmann <jannis@xfce.org>

	* README: Prevent geeks all over the world from trying to drink
	  cigarettes. This is not good for you! Neither is smoking them,
	  anyway ...

2007-02-18	Jannis Pohlmann <jannis@xfce.org>

	* icons/48x48/xfce4-time-out-plugin.png, 
	  icons/scalable/xfce4-time-out-plugin.svg: Replace dummy icon 