@@ -5,6 +5,11 @@
 
 2007-05-06	Jannis Pohlmann <jannis@xfce.org>
 
+	* xfce4-time-out-plugin.pot: Merge new strings.
+	* de.po: Update German translations.
+
+2007-05-06	Jannis Pohlmann <jannis@xfce.org>
+
 	* POTFILES.in, xfce4-time-out-plugin.pot: Merge new strings.
 	* de.po: Update German translations.
 
